den Namen von schmeißer-höhere-ana korregiert
git-svn-id: https://svn.lug-jena.de/uni-skripte@25 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/skripte/README
+++ b/skripte/README
@@ -29,7 +29,7 @@ Vorlesungsskript. Zur Zeit gibt es die folgenden:
 * Kommunikationssysteme, Prof. Dr. Werner Erhard: erhard-komm-sys
 * Parallelität, Prof. Dr. Hans-Dietrich Hecker: hecker-parallel
 * Formale Sprachen, Dr. Gerhard Lischke: lischke-form-sprachen
-* Höhere Analysis, Prof. Dr. Hans-Jürgen Schmeißer: scheißer-höhere-ana
+* Höhere Analysis, Prof. Dr. Hans-Jürgen Schmeißer: schmeißer-höhere-ana
 * Informatik 4, Dr. Jörg Vogel: vogel-info4
 * Das allgemeine Projekt für alle Skript: skripte
 
