--- a/skripte/README
+++ b/skripte/README
@@ -31,6 +31,7 @@ Vorlesungsskript. Zur Zeit gibt es die folgenden:
 * Formale Sprachen, Dr. Gerhard Lischke: lischke-form-sprachen
 * Höhere Analysis, Prof. Dr. Hans-Jürgen Schmeißer: schmeißer-höhere-ana
 * Informatik 4, Dr. Jörg Vogel: vogel-info4
+* Mathematik für Informatiker 3 (Wahrscheinlichkeitstheorie), Prof. Dr. Linde: linde-stochastik
 * Das allgemeine Projekt für alle Skript: skripte
 
 Die erste lokale Kopie wird mit folgendem Befehl erstellt:
