* Vorlesungstitel geändert aufgrund eines Hinweises im Seminar
git-svn-id: https://svn.lug-jena.de/uni-skripte@36 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hecker-parallel/skript.latex
+++ b/hecker-parallel/skript.latex
@@ -119,7 +119,7 @@
 
 \begin{document}
 
-\title{Parallelität}
+\title{Parallele Algorithmen}
 \author{Prof. Dr. Hans-Dietrich Hecker}
 \date{SS 2004}
 \maketitle
