* Die von Latex generierten Dateien aus dem Archiv gelöscht:   skript.idx, skript.toc, skript.ind, skript.ilg, skript.aux
* Die Klassenoption 12pti korregiert; 12pt

* n in einer Reihung im Beweis des Poissonschen GW-Satz ergänzt.

* Das Paket ae hinzugefügt, damit die Schrift in PDFs besser aussieht.


git-svn-id: https://svn.lug-jena.de/uni-skripte@37 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/linde-stochastik/skript.latex
+++ b/linde-stochastik/skript.latex
@@ -1,8 +1,9 @@
-\documentclass[draft,12pti,twoside]{scrreprt}
+\documentclass[draft,12pt,twoside]{scrreprt}
 \usepackage{a4wide}
 \usepackage{makeidx}
 \usepackage[T1]{fontenc}
 \usepackage[latin1]{inputenc}
+\usepackage{ae}
 \usepackage{ngerman}
 \usepackage{graphicx}
 \usepackage{delarray}
@@ -639,7 +640,7 @@ $$\ar \quad \p(A)=\frac{n!}{N\cdot\ldots\cdot(N-n+1)}=\frac{1}{\binom{N}{n}};\qu
                                                 \frac{\lambda}{n})^n(1-\frac{\lambda}{n})^{-k}\\
                                                 &=
                                                 \frac{\lambda^k}{k!}\frac{n(n-1)\cdot\ldots\cdot(n-k+1)}
-                                                {\underbrace{n\cdot\ldots\cdot}_{k-mal}}
+                                                {\underbrace{n\cdot\ldots\cdot n}_{k-mal}}
                                                                 (1-\frac{\lambda}{n})^n(1-\frac{\lambda}{n}^{-k}\\
                                                 &\underset{n\rightarrow\infty}{\rightarrow}
                                                                 \frac{\lambda^k}{k!}\cdot\qquad 1 \cdot
