usepackage{graphicx} hinzugefügt option draft entfernt
git-svn-id: https://svn.lug-jena.de/uni-skripte@39 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hecker-parallel/skript.latex
+++ b/hecker-parallel/skript.latex
@@ -17,7 +17,7 @@
 %  * Überlegen, ob man für KOSTEN auch einen Befehl macht. Kommt es oft
 %    genug im Dokument vor?
 
-\documentclass[draft,twoside]{scrreprt}
+\documentclass[twoside]{scrreprt}
 
 \usepackage{ifthen}
 
@@ -38,6 +38,7 @@
 	   }
 
 \usepackage{fancyvrb}
+\usepackage[pdftex]{graphicx}
 \usepackage{amssymb}
 \usepackage[intlimits,leqno]{amsmath}
 \usepackage{paralist}
@@ -122,14 +123,14 @@
 
 \title{Parallele Algorithmen}
 \author{Prof. Dr. Hans-Dietrich Hecker}
-\date{SS 2004}
+\date{SS 2005}
 \maketitle
 
 \pdfbookmark[0]{Inhaltsverzeichnis}{inhaltsverzeichnis}
 \tableofcontents
 \clearpage
 
-\pdfbookmark[0]{Litheraturverzeichnis}{litheraturverzeichnis}
+\pdfbookmark[0]{Literaturverzeichnis}{literaturverzeichnis}
 \begin{thebibliography}{Gibbon}
  \bibitem{JaJa} Joseph Ja'Ja: Introduction to parallel algorithms
  \bibitem{AKL} AKL: Introduction to parallel algorithms
@@ -138,12 +139,14 @@
 
 \chapter{Einleitung}
 serielle Algorithmen $\quad\rightarrow\quad$ Paradigmen\\
-\underline{Ziel:} Algo finden, die gut sind (Kriterium: Speicher, Zeit,
+\underline{Ziel:} Algorithmen finden, die gut sind (Kriterium: Speicher, Zeit,
 einfach Formulierbar)
 
 Die von Neumann-Architektur ist ein allgemein anerkanntes Modell im
 Seriellen -- Random access machine (RAM) --- Basisoperationen in
-$O(1)$-Zeit. F"ur parallele Algorithmen gibt es eine Vielzahl von
+$O(1)$-Zeit. 
+
+Für parallele Algorithmen gibt es eine Vielzahl von
 Modellen.
 \begin{itemize}
  \item Einmal wenig leistungsf"ahige Prozessoren
@@ -153,8 +156,9 @@ Modellen.
 
 unser Modell: SHARED MEMORY MODELL
 \begin{center}
-  \input{parall_modell.pdf_t}
 
+  \input{parall_modell.pdf_t}
+  
   MIMD -- Multiple Instruction Multiple Dataword\\
   SIMD -- Single Instruction Multiple Dataword\\
   PRAM -- Parallel Random Access Machine -- allgem. Verallgemeinerung der
