* neue Theoremumgebung Axiom; die Nummerierung geht über das ganze   Dokument
* Die Vorlesung vom 12.4.05

* \codim als mathematischen Operator für Kodimension definiert

* Vor den bisherigen Teil ein \part gesetzt und den neuen Teil als
  zweiten \part.

* Literaturliste erweitert.

* Komische Zeile am Ende mit Müll gelöscht.


git-svn-id: https://svn.lug-jena.de/uni-skripte@40 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -111,6 +111,7 @@
 \newtheorem{bsp}{Beispiel}[subsection]
 \newtheorem{folger}{Folgerung}[subsection]
 \newtheorem{lemma}{Lemma}[subsection]
+\newtheorem{axiom}{Axiom}
 
 \theoremstyle{nonumberbreak}
 \theoremsymbol{\ensuremath{_\blacksquare}}
@@ -191,6 +192,7 @@
 \DeclareMathOperator*{\supp}{supp}
 \DeclareMathOperator*{\esssup}{ess-sup}
 \DeclareMathOperator*{\card}{card}
+\DeclareMathOperator{\codim}{codim}
 
 \makeindex
 
@@ -214,7 +216,10 @@
  \bibitem{Schröder} H. Schröder: Funktionalanalysis, Harri Deutsch 2000
  \bibitem{Heuser} H. Heuser: Funktionalanalysis, Teubner 1992
  \bibitem{Hirzebruch} Hirzebruch, Scharlau: Einführung in die
-  Funktionalanalysis, B.I. Wissenschaftsverlag Mannheim 1991
+  Funktionalanalysis, B.I. Wissenschaftsverlag Mannheim 1991 (für
+  2.\,Semester)
+ \bibitem{Appell} J. Appell, M. Väth: Elemente der Funktionalanalysis,
+  Vieweg, Wiesbaden 2005 (für 2.\,Semester)
  \bibitem{Alt} Alt: lineare Funktionalanalysis, Springer
  \bibitem{Yosida} K. Yosida: Function alanalysis, Springer
  \bibitem{Rudin} W. Rudin: Function alanalysis, Mc Craw Hill N.Y. 1990
@@ -223,6 +228,8 @@
  \bibitem{Read} M. Read, B.Simon: Methods of modern mathematical physics
   I-IV, Academic Press 1972-78
 \end{thebibliography}
+
+\part{1.\,Semester}
 
 \chapter{Banachräume und beschränkte Operatoren}
 \section{Banachräume}
@@ -5789,9 +5796,216 @@ $A\in \mathcal{L}$ kompakt, $A = A^{\ast}, \dim H = \infty, Ax =
   \end{proof}
 \end{folger}
 
+\part{2.\,Semester}
+\chapter{Hauptsätze der Funktionalanalysis}
+\section{Vorbetrachtungen}
+\subsection{Zorn'sches Lemma und Auswahlaxiom}
+
+\begin{defini}[Ordnungsrelation]
+  $X\not=\emptyset$ Menge, $R\subset X\times X$ heißt
+  \highl{Ordnungsrelation} ("`$\leq$"') $:\Longleftrightarrow$
+  \begin{enumerate}
+   \item $R$ ist reflexiv, d.\,h. für alle $x\in R$ ist $x\leq x$ (
+    $(x,x)\in R$ )
+   \item $R$ ist antisymmetrisch, d.\,h. $x\leq y \wedge y \leq x
+    \Rightarrow x=y$
+   \item $R$ ist transitiv, d.\,h. $x\leq y \wedge y\leq z \Rightarrow
+    x\leq z$
+  \end{enumerate}
+  
+  $(X, \leq)$ heißt dann \highl{gordnete Menge}.
+  
+  Für eine Teilmenge $X_{1}\subset X$ bezeichnet man $(X_{1}, \leq)$ als
+  \highl{Kette} oder lineare geordnete Menge $:\Longleftrightarrow$ für
+  alle $x,y\in X_{1}$ gilt entweder $x\leq y$ oder $y\leq x$.
+\end{defini}
+
+\begin{bsp}
+  \begin{enumerate}
+   \item $X =\{a,b,c\}, a \leq b \leq c$
+   \item $(\N, \leq)$ ist eine Kette
+   \item $A_{1} \subset A_{2} \subset A_{3} \subset \ldots \subset A_{j}
+    \subset \ldots$ für $j\in\N$ ist eine Kette
+  \end{enumerate}
+\end{bsp}
+
+\begin{defini}
+  $(X, \leq)$ geordnete Menge, $X_{1}\subset X$
+  
+  $x\in X_{1}$ heißt \highl{maximales Element} $:\Longleftrightarrow$ für
+  alle $y\in X_{1}$ mit $x_{1}\leq y$ $\Longrightarrow$ $y=x_{1}$
+\end{defini}
+
+\begin{bsp}
+  $ a\leq b \leq c,d,e$ hat drei maximale Elemente
+\end{bsp}
+
+\begin{defini}
+  $(X, \leq)$ heißt \highl{induktiv geordnet} $:\Longleftrightarrow$ für jede
+  Kette $(X_{0},\leq)\subset (X,\leq)$ existiert ein $x\in X$ mit $y\leq
+  x$ für alle $y\in X_{0}$. (="`$\exists\sup$"')
+\end{defini}
+
+\begin{bsp}
+  $(\mathcal{P}(M), \subset)$ Potenzmenge ist induktiv geordnet.\help{was
+  war nochmal der Grund?}
+  
+  $(\N, \leq)$ ist nicht induktiv geordnet.
+\end{bsp}
+
+\begin{axiom}[Zorn'sches Lemma]\label{axi:zorn}
+  Ist $(X, \leq)$ eine induktiv geordnete Menge, so existiert in $X$
+  mindestens ein maximales Element.
+\end{axiom}
+
+\begin{defini}
+  $\mathfrak{M}$ Menge von Menge (\highl{Mengensystem}). $f$ heißt
+  Auswahlfunktion $:\Longleftrightarrow$
+  \begin{enumerate}
+   \item $f:\mathfrak{M} \rightarrow \bigcup_{M\subset \mathfrak{M}}$
+   \item $\forall M (M\in\mathfrak{M} \Rightarrow f(M)\in M)$
+  \end{enumerate}
+\end{defini}
+
+\begin{bsp}
+  $\mathfrak{M} = \{A_{j}: j\in\N\}, A_{j}\not=\emptyset \forall j,
+  a_{j}\in A_{j}: f(A_{j})= a_{j}$
+\end{bsp}
+
+\begin{axiom}[Auswahlaxiom]\label{axi:auswahl}
+  Zu jedem Mengensystem $\mathfrak{M}$ mit $\emptyset\not\in\mathfrak{M}$
+  exsistiert eine Auswahlfunktion.
+\end{axiom}
+
+\begin{bemerk}
+  Zorn'sches Lemma und Auswahlaxiom sind gleichwertig (\thref{axi:zorn}
+  $\Longleftrightarrow$ \thref{axi:auswahl})
+\end{bemerk}
+
+\begin{bemerk}
+  Auswahlaxiom wird oft unbewußt benutzt, z.\,B. $I$ Indexmenge,
+  $A_{j}\not=\emptyset$
+  \begin{equation*}
+    \prod_{j\in I} A_{j}:= \{(x_{j})_{j\in I}: \forall j (j\in I
+    \Rightarrow x_{j}\in A_{j})\}
+  \end{equation*}
+\end{bemerk}
+
+\begin{satz}\label{satz:3.1.1/1}
+  Jeder Vektorraum $E\not=\{0\}$ besitzt eine Basis. Diese nennt man
+  "`Hamelbasis"', benannt nach Alfred Hamel 1877--1954.
+  
+  \begin{proof}
+    \textup{Wiederholung:}
+    $B\subset E$ heißt Basis $\Leftrightarrow$
+    \begin{enumerate}
+     \item $B$ linear unabhängig, d.\,h. je endlich viele Elemente aus
+      $B$ sind linear unabhägig.
+     \item $\Span B =E$
+    \end{enumerate}
+    
+    Es sei $X := \{ M : M\subset E \text{ linear unabhängig}\}$.
+    Dann ist $(X,\subset)$ ist eine geordnete Menge und sogar induktiv
+    geordnet, denn für eine Kette $X_{0}$ in $X$ ist $\bigcup_{U \subset
+    X_{0}} U =: M$ linear unabhängig ($M\in X, U\subset M, \forall U\in
+    X_{0}$)
+    
+    Jetzt können wir \thref{axi:zorn} anwenden und erhalten so, dass ein
+    maximales Element $B\in X$ existiert. Dieses $B$ ist eine Basis in
+    $E$, denn: sei $a\in E, a\not\in B$, betrachte $M = B\cup \{ a\}$.
+    $M$ ist linear abhängig, da $B$ maximales Element. $a$ ist also
+    bereits im $\Span B$.
+  \end{proof}
+\end{satz}
+
+\begin{satz}\label{satz:3.1.1/2}
+  $E\not=\{0\}$ Vektorraum. Zu jeder linear unabhängigen Menge $M\subset
+  E$ gibt es eine Basis in $E$, die $M$ enthält.
+  
+  \begin{proof}
+    $X:= \{\tilde{M}: \tilde{M}\subset E \text{ linear unabhängig},
+    M\subset \tilde{M}\}$ $\Longrightarrow$ $(X,\subseteq)$ induktiv
+    geordnete Menge. Weiter wie im Beweis von \thref{satz:3.1.1/1}.
+  \end{proof}
+\end{satz}
+
+\subsection{Komplementärräume}
+
+$E$ Vektorraum (reell oder komplex), $x_{0}\in E, \lambda\in\K,
+M,N\subset E$
+\begin{align*}
+  x_{0}\pm M &:=\{ x_{0}\pm x: x\in M\}\\
+  M\pm M &:= \{x\pm y: x\in M, y\in N\}\\
+  \lambda M &:= \{\lambda x: x\in M\}
+\end{align*}
+
+\begin{defini}
+  $G,F \subset E$ Teilräume, $G$ heißt \highl{algebraische Komplement}
+  von $F$ $:\Longleftrightarrow$ 
+  \begin{enumerate}
+   \item $E = F+G$
+   \item $F\cap G = \{0\}$
+  \end{enumerate}
+  
+  \textup{Schreibweise:} $E= F\oplus G$
+\end{defini}
+
+\begin{bemerk}
+  \begin{enumerate}
+   \item $E= F\oplus G$ $\Longrightarrow$ $\exists$ eindeutige Zerlegung 
+    $z =x+y$ mit $x\in F$ und $y\in G$ für jedes $z\in E$.
+    
+    \begin{proof}
+      Ann.: $x_{1}+y_{1} = x_{2}+y_{2}$ $\Longrightarrow$
+      $\underbrace{x_{1}-x_{2}}_{\in F} = \underbrace{y_{2}-y_{1}}_{\in
+      G} = 0$
+    \end{proof}
+   \item $H$ Hilbertraum, $F$ abgeschlossener Teilraum von $H$
+    Dann ist $H = F\oplus F^{\perp}$ und $F^{\perp}$ ist eindeutig
+    bestimmt.
+  \end{enumerate}
+\end{bemerk}
+
+\begin{satz}
+  $E\not=\{0\}$ sie Vektorraum.
+  
+  Zu jedem Teilraum von $E$ gibt es ein algebraisches Komplement.
+  
+  \begin{proof}
+    $F\subset E$ Teilraum. Wir wählen $M$ als eine Basis in $F$ (möglich
+    nach \thref{satz:3.1.1/1}). Dann existiert eine Basis $N$ von $E$,
+    die $M$ enthält (möglich nach \thref{satz:3.1.1/2}). Setze $G :=
+    \Span N\setminus M$ $\Longrightarrow$ $E= \oplus G$.
+  \end{proof}
+\end{satz}
+
+\begin{satz}
+  Zwei Komplementärräume eines Teilraums in $E$ sind entweder beide
+  unendlich dimensional oder beide haben die gleiche (endliche) Dimension.
+  
+  \begin{proof}
+    $E = F\oplus G_{2}$ und $E=F \oplus G_{2}$, $\dim G_{2}<\infty$.
+    
+    Wir konstruieren einen Isomorphismus zwischen $G_{1}$ und $G_{2}$ um
+    zu zeigen, dass $\dim G_{1} = \dim G_{2}$.
+
+    Dazu definieren wir eine Abbildung $Tu := v$, falls $u= y+v$ mit
+    $y\in F$ und $v\in G$. Daraus folgt $T: G_{1} \rightarrow G_{2}$ ist
+    ein Isomorphismus (d.\,h. linear, injektiv und surjektiv -- selber
+    überprüfen!).
+  \end{proof}
+\end{satz}
+
+\begin{defini}
+  $E$ ist eine Vektorraum, $F \subset E$ Teilraum, $G$ algebraisches
+  Komplement von $F$.
+  \begin{equation*}
+    \codim F := \dim G
+  \end{equation*}
+\end{defini}
+
 \clearpage
 \pdfbookmark[0]{Index}{index}
 \printindex
-$x_{1},\ldots,x_{n}$ $a_{1}\ldots a_{4}$ e\ldots z
 
 \end{document}
