* einige typos gefixt * ein \end{section} hinzugefÃŒgt am ende (hat gefehlt)
git-svn-id: https://svn.lug-jena.de/uni-skripte@55 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hecker-parallel/skript.latex
+++ b/hecker-parallel/skript.latex
@@ -174,7 +174,7 @@ Modellen. Es gibt viel mehr Abhängigkeiten vom konkreten Rechner.
 	allgemeine Entwurfsprinzipien
 	Ziel für das Modell:
 	\begin{itemize}
-	\item Einfachheit - möglichst Maschinenunabhängig
+	\item Einfachheit - möglichst maschinenunabhängig
 	\item Implementierbarkeit
 	\end{itemize}
 \begin{defini}{Speed Up}\\
@@ -183,7 +183,7 @@ Modellen. Es gibt viel mehr Abhängigkeiten vom konkreten Rechner.
 	\[
 		S_{p}(n):=\frac{T^{\ast}(n)}{T_{p}(n)}
 	\]\\
-	(Beschleunigung gegenüber eines seriellen Algorithmus)
+	(Beschleunigung gegenüber einem seriellen Algorithmus)
 \end{defini}
 
 \begin{satz}
@@ -191,7 +191,7 @@ Modellen. Es gibt viel mehr Abhängigkeiten vom konkreten Rechner.
 	
 	\begin{proof}
 		Simulation der Rechnungen der $p$ Prozessoren schrittweise nacheinander
-		gibt einen neuen seriellen Algorithmus, der nicht schneller als 
+		ergibt einen neuen seriellen Algorithmus, der nicht schneller als 
 		$T^*(n)$ sein kann.
 	\end{proof}
 
@@ -207,7 +207,7 @@ Modellen. Es gibt viel mehr Abhängigkeiten vom konkreten Rechner.
 \end{bemerk}
 
 Folgerung: Mit polynomial vielen Prozessoren kann man ein NP-schweres
-Problem \emph{nicht} parallel in Polynomzeit lösen.
+Problem \emph{nicht} parallel in Polynomialzeit lösen.
 
 \begin{defini}[Effizienz]
 \begin{equation*}
@@ -223,7 +223,7 @@ Problem \emph{nicht} parallel in Polynomzeit lösen.
 
 Sei $P$ ein Problem:
 
-serieller Algo $A$, Input size $n$ $\quad\rightarrow\quad T_{A}(n)$
+Serieller Algo $A$, Input size $n$ $\quad\rightarrow\quad T_{A}(n)$
 
 Def.: $T^{\ast}(n)$ sei das serielle Optimum
 
@@ -235,7 +235,7 @@ Sei $A$ parall. Algo., $p$ Prozessoren
   Was ist f"ur einen Algorithmus die maximale Anzahl an zur gleichen Zeit
   ausf"uhrbaren Operationen?
 
-  Im Normalfall kann man jeden Parallelen Algorithmen auf jede Anzahl an
+  Im Normalfall kann man jeden parallelen Algorithmus auf jede Anzahl an
   Prozessoren anpassen.
 \end{satz}
 
@@ -289,7 +289,7 @@ synchrones Modell
 Beispiel 2:\\
 INPUT: $n=2^{k}$ Zahlen in Array $A$, $n$ Proz, $i:i\le i \le n$\\
 OUTPUT: $\sum_{i=1}^{n}a_{i}\quad\Rightarrow\quad$ gespeichert im shared
-mem., Variable $S$
+memory, Variable $S$
 
 begin
 \begin{enumerate}
@@ -318,7 +318,7 @@ Aus Baum leicht zu erkennen: Berechnung in O($\log n$)
 Kosten $C(n)=\underbrace{P(n)}_{O(n)}\,\underbrace{T(n)}_{O(\log
 n)}=O(n\log n)$
 
-serielles Optimum $T^{*}=O(n) C(N)\ge T^{*}(n)$
+Serielles Optimum $T^{*}=O(n) C(N)\ge T^{*}(n)$
 
 \begin{defini}
   Ein Algorithmus hei"st optimal, wenn $C(n)=T^{*}(n)$
@@ -332,9 +332,8 @@ und die Kosten $C(n)=O(n)$ hat.
 sei $\log n=r\in\N, \frac{n}{\log n}\in\Z, p_{1},\ldots,p_{\frac{n}{\log
 n}}$
 
-Algo: $p_{i}$ addiert die Zahlen $a_{(i-1)\log(n)+1}+\ldots+a_{i\log n}$
-(seriell in $O(\log n)$ \Time)
-weiter mit oberen Algo mit $z_{i}$
+Algorithmus: $p_{i}$ addiert die Zahlen $a_{(i-1)\log(n)+1}+\ldots+a_{i\log n}$
+(seriell in $O(\log n)$ \Time) weiter mit oberen Algorithmus mit $z_{i}$
 
 Kosten: $C(n)=O(\log n)\,O(\frac{n}{\log n})=O(n)$
 
@@ -342,9 +341,10 @@ Ab sofort: Kurzform von globalread() bzw. globalwrite()
 
 \begin{bemerk}
   Das synchrone shared memory-Modell hei"st PRAM.
-  EREW-PRAM, CREW-PRAM, CRCW-PRAM (unterteilung in common (schreiben nur
-  zugelassen, wenn alle prozessoren wollen das gleiche schreiben),
-  arbitrary (es wird z.B. die Summe aller Werte geschrieben), priority
+  EREW-PRAM, CREW-PRAM, CRCW-PRAM (Unterteilung in {\it common}, d.h. das Schreiben ist nur dann
+  zugelassen, wenn alle Prozessoren das Gleiche schreiben,
+  sowie {\it arbitrary}, was z.Bsp. die Summenbildung über allen Werten darstellen kann.
+  Weiterhin: {\it  priority }.
 \end{bemerk}
 
 Vorgehen: Oberes Level - Unteres Level.
@@ -2075,4 +2075,5 @@ $\rightarrow$ Graph, s,u,v
   wert($g_{n}$)=1
 \end{defini}
 
+\end{section}
 \end{document}
