* skript.latex:   + Titel geändert (F.Ana 1 -> F.Ana)
  + Fußnote auf Titelseite für aktuelle Versionsnummer hinzugefügt

  + Vorlesung vom 14.4. hinzugefügt

  + pdflatex meckert das \, in \part{} an. Mit \texorpdfstring dieses
    behoben.

* svn:keywords "date rev" skript.latex


git-svn-id: https://svn.lug-jena.de/uni-skripte@59 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -198,7 +198,7 @@
 
 \begin{document}
 
-\title{Höhere Analysis I}
+\title{Höhere Analysis\thanks{$LastChangedRevision$ von $LastChangedDate$}}
 \author{Prof. Dr. Hans-Jügen Schmeißer}
 \date{WS 2004/05}
 \maketitle
@@ -229,7 +229,7 @@
   I-IV, Academic Press 1972-78
 \end{thebibliography}
 
-\part{1.\,Semester}
+\part{1.\texorpdfstring{\,}{ }Semester}
 
 \chapter{Banachräume und beschränkte Operatoren}
 \section{Banachräume}
@@ -5796,7 +5796,7 @@ $A\in \mathcal{L}$ kompakt, $A = A^{\ast}, \dim H = \infty, Ax =
   \end{proof}
 \end{folger}
 
-\part{2.\,Semester}
+\part{2.\texorpdfstring{\,}{ }Semester}
 \chapter{Hauptsätze der Funktionalanalysis}
 \section{Vorbetrachtungen}
 \subsection{Zorn'sches Lemma und Auswahlaxiom}
@@ -6003,6 +6003,209 @@ M,N\subset E$
     \codim F := \dim G
   \end{equation*}
 \end{defini}
+
+\subsection{Quotientenräume}
+$(E,\|\cdot\|_{E})$ normierter Vektorraum, $F\subset E$ abgeschlossener
+Teilraum, Äquivalenzrelation: $x\sim y := x-y \in F$
+
+\begin{defini}
+  $\nicefrac{E}{F}$\ldots Menge aller Äquivalenzklassen bzgl. $\sim$
+  heißt \highl{Quotentenraum} von $E$ nach $F$.
+  
+  \textup{Schreibweise:} $x\in E, \overline{x}:= x+F$, die durch $x$
+  repräsentierte Äquivalenzklasse.
+  
+  $\overline{O}=F$, $\overline{x} = \overline{y} :\Longleftrightarrow
+  \overline{x}- \overline{y} = \overline{0}$
+\end{defini}
+
+\begin{defini}
+  \begin{enumerate}
+   \item Die Abbildung $x \rightarrow \overline{x}$ von $E$ nach
+    $\nicefrac{E}{F}$ heißt \highl{kanonische Abbildung}.
+   \item $\overline{x}+\overline{y} := x+y+F = \overline{x+y}$\\
+    $\lambda\overline{x} := \lambda x+F = \overline{\lambda x}$
+    
+    \textup{Schreibweise:} $x\in E, \overline{x} := x+F$, die durch $x$
+    repräsentierte Äquivalenzklasse
+   \item $\|\overline{x}\| := \inf_{y\in F} \|x+y\|_{E}$
+  \end{enumerate}
+\end{defini}
+
+\begin{satz}
+  \begin{enumerate}
+   \item Die Abbildung $\overline{x}\rightarrow\|\overline{x}\|$ ist eine
+    Norm auf $\nicefrac{E}{F}$. $\nicefrac{E}{F}$ ist normierter
+    Vektorraum.
+   \item Die kannonische Abbildung von $E$ nach $\nicefrac{E}{F}$ ist
+    linear, beschränkt und hat Norm $\leq1$.
+   \item $E$ Banachraum $\Longrightarrow$ $\nicefrac{E}{F}$ ist Banachraum.
+  \end{enumerate}
+  
+  \begin{proof}
+    Normeigenschaft: $0 = \|\overline{x}\| = \inf_{y\in F}\|x+y\|_{E}$
+    $\Longrightarrow$ $\exists$ Folge $(y_{j})\subset F$ mit
+    $\|x+y_{j}\|_{E} \rightarrow 0$ $\Longrightarrow$ $y_{j}\rightarrow
+    -x$. Da $F$ abgeschlossen ist, folgt daraus $x\in F$ und somit
+    $\overline{x} =0$
+    
+    $E$ vollständig $\Longrightarrow$ $\nicefrac{E}{F}$ vollständig.
+    Verwenden \thref{satz:1.1.1/1}. Es sei $\sum_{n=1}^{\infty}
+    \|\overline{x_{n}}\|< \infty$. wähle $y_{n}\in F$ mit
+    $\|\underbrace{x_{n}+y_{n}}_{=: z_{n}}\|_{E} \leq
+    \|\overline{x_{n}}\| + \frac{1}{2^{n}}$ $\Longrightarrow$ $\sum
+    \|z_{n}\|_{E} \leq \sum_{n=1}^{\infty} \|\overline{x_{n}}\| +
+    \sum_{n=1}^{\infty} \frac{1}{2^{n}} < \infty$.
+    
+    $E$ vollständig $\Longrightarrow$ $\exists z\in E$ mit
+    $\sum_{n=1}^{N} z_{n} \xrightarrow{N\rightarrow\infty} z$ in $E$.
+    
+    Es gilt: $\overline{x_{n}} = \overline{z_{n}} \Rightarrow
+    \|\sum_{n=1}^{N} \overline{x_{n}} - \overline{z}\| = \|
+    \overline{\sum_{n=1}^{N} z_{n}-z}\| \leq \|\sum_{n=1}^{N}
+    z_{n}-z\|_{E} \rightarrow 0$ $\Longrightarrow$ $\exists$
+    $\sum_{n=1}^{\infty} \overline{x_{n}} = \overline{z}$
+  \end{proof}
+\end{satz}
+
+\section{Der Satz von Baire und Folgerungen}
+\subsection{Der Satz von Baire für vollständige metrische Räume}
+
+\textsl{Wiederholung von Begriffen:}
+$(X,d)$ metrischer Raum, $K_{\epsilon}(x_{0}) = \{x\in X: d(x,x_{0}) <
+\epsilon\}$ offene Kugel um $x_{0}$, $A\subset X$ offen, $A$ abgeschlossen,
+$\overline{A}$ Abschluss, $A^{0}$ alle inneren Punkte, $x_{0}$ innerer
+Punkt, $A$ dicht in $X$ $:\Longleftrightarrow$ $\overline{A}=X$,
+Konvergenz
+						  
+\begin{lemma}[Stetigkeit der Metrik]\label{lem:3.2.2/1}
+  $(X,d)$ metrischer Raum, $x_{j} \rightarrow x$ in $X$ $\Longrightarrow$
+  $\forall y\in X:d(x_{j},y) \rightarrow d(x,y)$.
+  
+  \begin{proof}
+    $|d(x_{j}, y) - d(x,y)| \leq d(x_{j}, x) \rightarrow 0$
+  \end{proof}
+\end{lemma}
+
+\begin{lemma}["`Intervallschachtelung"']\label{lem:3.2.2/2}
+  $(X,d)$ vollständiger metrischer Raum
+  
+  $E_{j} = \{x\in X : d(x,x_{j}) \leq \epsilon_{j} \} (j\in\N)$ Folge von
+  abgeschlossenen Kugeln mit $\lim_{j\rightarrow\infty} \epsilon_{j} =0$
+  und $E_{j+1}\subset E_{j}$ für alle $j\in\N$. $\Longrightarrow$
+  $\exists$ genau eine $x\in X$ mit $\bigcap_{j=1}^{\infty}  E_{j} =
+  \{x\}$.
+  
+  \begin{proof}
+    \begin{equation}\label{eq:442}
+      k > j \Longrightarrow E_{k}\subset E_{j} \Longrightarrow d(x_{k},
+	 x_{j}) \leq \epsilon_{j}
+    \end{equation}
+    $\Longrightarrow (x_{j})_{j}$ ist Cauchyfolge $\Longrightarrow$
+    $x_{j}\rightarrow x\in X$, da der metrische Raum vollständig ist. Aus
+    Gleichung~\eqref{eq:442} folgt mit \thref{lem:3.2.2/1} für
+    $k\rightarrow\infty$, dass $d(x, x_{j}) \leq \epsilon_{j}$ für alle
+    $j$. Daraus folgt wiederrum, dass $x\in \bigcap_{j=1}^{\infty} E_{j}$.
+    
+    Ann.: $y\in \bigcap_{j=1}^{\infty} E_{j}$
+    
+    $\Longrightarrow$ $d(x,y) \leq d(x,x_{j}) + d(x_{j},y) \leq 2
+    \epsilon_{j} \rightarrow 0$ $\Longrightarrow$ $x=y$
+  \end{proof}
+\end{lemma}
+
+\begin{satz}[Baire]\label{satz:baire}
+  $(X,d)$ vollständiger metrischer Raum. $(A_{j})^{\infty}_{j=1}$ Folge
+  abgeschlossener Mengen aus $X$ und $\bigcup_{j=1}^{\infty}A_{j}$
+  enthalte eine offene Kugel.
+  
+  Dann existiert ein $j\in\N$, so dass $A_{j}$ eine offene Kugel enthält.
+  
+  \begin{proof}
+    Es sei $K_{\epsilon_{0}}(x_{0}) \subset \bigcup_{j=1}^{\infty}
+    A_{j}$.
+    
+    indirekter Beweis: 
+    \begin{equation}\label{eq:443}
+      \forall j\in \N\ \forall\epsilon>0\ \forall x\in X: K_{\epsilon}(x)
+      \cap (X\setminus A_{j}) \not= \emptyset
+    \end{equation}
+    
+    \eqref{eq:443} $\Longrightarrow$ $\exists y_{1}\subset
+    K_{\epsilon_{0}}(x_{0})\cap (X\setminus A_{1})$ offen
+    $\Longrightarrow$ $\exists\epsilon_{1}< 1$ $\exists$ abgeschlossene
+    Kugel $E_{1} = \{ z : d(z,y_{1}) \leq \epsilon_{1} \} \subset 
+    K_{\epsilon_{0}} \cap (X\setminus A_{1})$
+		
+    \eqref{eq:443} $\Longrightarrow$ $\exists y_{2}\in
+    K_{\epsilon_{1}}(y_{1}) \cap (X\setminus A_{2})$ offen
+    $\Longrightarrow$ $\exists\epsilon_{2}<\frac{1}{2}$ $\epsilon$
+    abgeschlossene Kugel $E_{2}= \{ z: d(z,y_{2})\leq \epsilon_{2}\}
+    \subset K_{\epsilon_{1}}(y_{1})\cap (X\setminus A_{2})$ und
+    $E_{2}\subset K_{\epsilon_{1}} \subset E_{1}$
+    
+    Iteration $\Rightarrow$ $\forall j\in\N$ $\exists y_{j}\in
+    K_{\epsilon_{j-1}}(y_{j-1}) \cap (X\setminus A_{j})$ offen
+    $\Longrightarrow$ $\exists$ $\epsilon_{j}< \frac{1}{j}$ $\exists$
+    abgeschlossene Kugel $E_{j}= \{z: d(z,y_{j}) \leq
+    \epsilon_{j}\}\subset K_{\epsilon_{j-1}}(x_{j-1})\cap (X\setminus
+    A_{j})$ und $E_{j}\subset E_{j-1}$
+    
+    \thref{lem:3.2.2/2} $\Longrightarrow$ $\exists y\in X$ mit
+    $\bigcap_{j=1}^{\infty} E_{j}= \{y\}$. $y\in
+    \bigcap_{j=1}^{\infty}(X\setminus A_{j}) = X\setminus
+    \bigcup_{j=1}^{\infty} A_{j} \Longrightarrow y\in
+    \bigcup_{j=1}^{\infty} A_{j}$. Andererseits hatten wir angenommen,
+    dass $y\in E_{1} \subset K_{\epsilon_{0}}(x_{0}) \subset
+    \bigcup_{j=1}^{\infty}A_{j}$. Wir haben also einen Widerspruch,
+    weshalb unsere Annahme nicht korrekt seien kann.
+  \end{proof}
+\end{satz}
+
+\begin{defini}
+  \begin{enumerate}
+   \item $A\subset X$ heißt \highl{nirgends dicht} $:\Longleftrightarrow$
+    $\overline{A}^{0} = \emptyset$ (d.\,h. keine inneren Punkte in
+    $\overline{A}$)
+   \item $M$ heißt \highl{mager} (oder \highl{Menge 1.\,Kategorie})
+    $:\Longleftrightarrow$ $M$ ist abzählbare Vereinigung nirgends
+    dichter Teilmengen. Andererseits heißt $M$ \highl{Menge 2.\,Kategorie}.
+  \end{enumerate}
+\end{defini}
+
+\begin{satz}\label{satz:3.2.2/2}
+  Für einen vollständigen metrischen Raum $(X,d)$ ist jede nichtleere
+  offene Kugel von 2.\,Kategorie.
+  
+  \begin{proof}
+    $\Omega\subset X$ offen, $\Omega\not=\emptyset$
+    
+    indirekter Beweis: Ann.: $\Omega$ Menge 1.\,Kategorie. dann wäre
+    $\Omega$ eine abzählbare Vereinigung dichter Teilmengen $B_{j}$ von
+    $X$. Daraus folgt
+    $\Omega\subset\bigcup_{j=1}^{\infty}\overline{B_{j}}$ und mithilfe
+    von \thref{satz:baire} folgt $\exists\overline{B_{j}}$, dass offene
+    Kugel enthält $\Longrightarrow$ $\overline{B_{j}}^{0}\not=\emptyset$.
+    Widerspruch, da $B_{j}$ nirgends dicht.
+  \end{proof}
+\end{satz}
+
+\begin{folger}
+  $(X,d)$ vollständiger metrischer Raum $\Longrightarrow$ $X$ ist Menge
+  2.\,Kategorie
+\end{folger}
+
+\begin{folger}
+  $(X,d)$ vollständiger metrischer Raum. Ist $M$ mager (1.\,Kategorie),
+  so ist $X\setminus M$ dicht in $X$.
+  
+  \begin{proof}
+    (indirekt) Ann.: $x\in X$ und $\exists \epsilon > 0, K_{\epsilon}(x)$
+    enthält keinen Punkt aus $X\setminus M$ $\Longrightarrow$
+    $K_{\epsilon}(x)\subset M \Longrightarrow K_{\epsilon}(x)$ ist mager
+    (1.\,Kategorie) $\Longrightarrow$ Widerspruch zu \thref{satz:3.2.2/2}
+  \end{proof}
+\end{folger}
 
 \clearpage
 \pdfbookmark[0]{Index}{index}
