+ README   * Mailingliste aufgeführt   * (skripte@listserv.uni-jena.de und skripte-commit@listserv.uni-jena.de)
git-svn-id: https://svn.lug-jena.de/uni-skripte@64 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/skripte/README
+++ b/skripte/README
@@ -90,6 +90,11 @@ Es sind alle recht herzlich eingeladen, an den Dokumenten mitzuarbeiten
 und wenn es nur ist, die Fehler darin zu suchen oder Vorschläge zu
 machen -- damit ist auch viel geholfen.
 
-Diskussionen werden am Besten in der Newsgruppe fsu.frzmi geführt.
+Diskussionen werden auf der Mailingliste skripte@listserv.uni-jena.de geführt.
+Commits werden auf der Mailinglsite skripte-commit@listserv.uni-jena.de angekündigt. 
+Um sich an dieser Mailingliste anzumelden, ist es nötig eine Email mit dem
+Inhalt "subscribe" an skripte-request@listserv.uni-jena.de 
+(skripte-commit-request@listserv.uni-jena.de) zu schicken.
+
 
 Jörg Sommer <joerg@alea.gnuu.de>
